--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,37 @@ h1{
   margin-top: 4rem;
   text-transform: capitalize;
 }
+
+.container {
+  text-align: center;
+  margin-top: 5rem;
+}
+.users {
+  max-width:90vw;
+  display: grid;
+  grid-template-columns:repeat(auto-fit, minmax(300px,1fr));
+  gap: 2rem;
+  margin: 3rem auto;
+}
+.users li {
+  width:100%;
+  display: flex;
+  align-items: centre;
+  background: var(--white);
+  padding:1rem 2rem;
+  border-radius: var(--borderRadius);
+  text-align: left;
+}
+.users img{
+  width: 50px;
+  height:50px;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+}
+.users h5 {
+  margin-bottom: 0;
+}
+.users a {
+  color : var(--primary-500);
+  text-transform: capitalize;
+}
