--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,25 @@
   color:rgb(28, 27, 27);
  background-color: rgb(17, 231, 74);
 }
+.form{
+  width: 90vw;
+  max-width: var(--fixed-width);
+  background: var(--grey);
+border-radius: var(--borderRadius);
+box-shadow: var(--shadow-2);
+padding: 2rem 2.5rem;
+margin:3rem auto;
+}
+.form-label{
+  display: block;
+  font-size: var(--small-text);
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  letter-spacing: var(--letterSpacing);
+  text-align: centre;
+}
+.form-input, .form-textarea {
+width: 50%;
+padding : 0.375rem 0.75rem;
+border-radius: var(--borderRadius);
+}
